--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-stm32f1xx-hal = { version = "0.6.1", features = [ "stm32f103", "stm32-usbd" ] }
+stm32f1xx-hal = { version = "0.6.1", features = [ "stm32f103", "stm32-usbd", "rt" ] }
 cortex-m = "0.6.2"
 cortex-m-rt = "0.6.12"
 embedded-hal = "0.2.4"
